# N3MO

./: .gitignore  README.md  docker-compose.yml
analysis-cpp/samples/: hello.cpp
analysis-cpp/src/: main.cpp
api/: Dockerfile  main.py  requirements.txt
archive/: chunk.py  chunk_store.py  codeseer.py  index_files_es.py
archive/analysis-cpp/: CMakeLists.txt
archive/api/: config.py  main.py
archive/scanner/: file_classifier.py  language_detector.py  repo_scan.py
archive/search/: basic_search.py  index_builder.py
db/: schema.sql
db-init/: Dockerfile
indexer/: Dockerfile  chunk.py  cli.py  database.py  db_test.py  impact_graph.html  index_files_es.py  indexer.py  ingest_files.py  requirements.txt  resolve_imports.py  run_indexer.py  testingchunk.py
